# wagtail-localize-openai

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/wagtail_localize_openai_translator/: translate.py
tests/: test_translate.py
