[project]
name = "wagtail-localize-openai-translator"
version = "0.1.0"
description = ""
authors = [
    {name = "Python Italia",email = "help@pycon.it"},
]
dependencies = [
    "openai>=1.3.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
